fix(YALB-1657): update caption and button spacing

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -217,7 +217,7 @@ $modal-speed: var(--animation-speed-slow);
     padding-inline-start: var(--size-spacing-10);
 
     @media (min-width: tokens.$break-2xl) {
-      padding-inline-start: var(--size-spacing-4);
+      padding-inline-start: var(--size-spacing-6);
     }
   }
 
